[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["olutunmie <olutunmie@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
tzdata = "^2023.3"
sqlparse = "^0.4.4"
asgiref = "^3.6.0"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
